userpoints and level getter added
